# grokking

./: .gitignore  README.md  pyproject.toml  run.py
assets/: model.html
src/: __init__.py  config.py  data.py  model.py  utils.py
