[project]
name = "grokking"
version = "0.1.0"
description = "Grokking modular addition."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "simple-parsing>=0.1.8",
    "torch>=2.10.0",
    "tqdm>=4.67.2",
    "treescope>=0.1.10",
    "wandb>=0.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
